Fixing unit test